[gd_scene load_steps=3 format=3 uid="uid://xqfa36m0lheo"]

[ext_resource type="Theme" uid="uid://fs8ra7ncelrb" path="res://resources/base_theme.tres" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://cm4wa0eqwexhk" path="res://scripts/main_menu.gd" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l6cm7")
script = ExtResource("2_ekxnf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Random test scenes"
horizontal_alignment = 1

[node name="Grid" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Grid test"

[node name="Monster" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Monster"

[node name="Cards" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cards"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Grid" to="." method="_on_grid_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Monster" to="." method="_on_monster_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Cards" to="." method="_on_cards_pressed"]
